--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.15"
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "randomstring": "^1.2.1"
   }
 }
